--- a/style.css
+++ b/style.css
@@ -15,3 +15,20 @@ html {
     /* text-underline-offset: 1rem; */
     opacity: .8;
 }
+
+#sauce {
+    color: black;
+    opacity: 1;
+    letter-spacing: .01rem;
+    /* text-align: left; */
+}
+
+#about {
+    margin-top: 200px;
+}
+
+#marginhooks {
+    margin-top: 5rem;
+    margin-bottom: 3rem;
+}
+
